public interface ReportFault {

    boolean isFaulty();
}
