public enum WorkerType {
    MANUAL_WORKER,
    MEDIC,
    MANAGER
}
